# TestTask

./: Dockerfile  docker-compose.yml  pyproject.toml
src/: di.py  main.py  redis.py
src/api/: dependencies.py
src/api/v1/: __init__.py  auth_router.py  course_router.py
src/models/: base.py
src/models/courses/: __init__.py  course.py
src/models/user/: __init__.py  auth.py  user.py
src/repositories/: auth_repository.py  course_repository.py
src/schemas/: auth.py  course.py
src/services/: CRUD.py
src/services/courses/: __init__.py  course_service.py  favorite_service.py
src/services/user/: __init__.py  auth_service.py  user_service.py
src/settings/: auth.py  database.py  redis.py
src/utils/: module_package.py
