[tool.poetry]
name = "testtask"
version = "0.1.0"
description = ""
authors = ["sandrkl <ddmitriev956@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.39"
fastapi = "^0.115.11"
pydantic = {extras = ["email"], version = "^2.11.2"}
python-dotenv = "^1.0.1"
pydantic-settings = "^2.8.1"
dependency-injector = "^4.46.0"
fastapi-cache2 = "^0.2.2"
redis = "^5.2.1"
asyncpg = "^0.30.0"
pyjwt = "^2.10.1"
ruff = "^0.11.0"
isort = "^6.0.1"
python-multipart = "^0.0.20"
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
